--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.testdeveloperproject" >
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE "/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name="App"
         android:allowBackup="true"
@@ -15,7 +18,7 @@
         android:theme="@style/Theme.TestDeveloperProject"
         tools:targetApi="31" >
         <activity
-            android:name=".features.main.MainActivity"
+            android:name="com.example.testdeveloperproject.presentaion.features.main.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
