--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,13 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
 
+    //RecyclerView
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
 
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
 
 
 
