Add show gifs in Detail Fragment

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -15,9 +15,13 @@ android {
     }
 
     buildTypes {
+        debug {
+            buildConfigField "String", "BASE_URL", "\"https://api.giphy.com/v1/\""
+            buildConfigField "String", "API_KEY", "\"lmLp5f9xrCaT8dRrDiAixYt16ntHnI2M\""
+        }
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField "String", "BASE_URL", "\"https://api.giphy.com/v1/\""
+            buildConfigField "String", "API_KEY", "\"lmLp5f9xrCaT8dRrDiAixYt16ntHnI2M\""
         }
     }
     compileOptions {
