--- a/data/build.gradle
+++ b/data/build.gradle
@@ -39,17 +39,15 @@ dependencies {
     implementation project(':domain')
 
     //Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versionKotlinCoroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versionKotlinCoroutines"
 
     //DI Koin main features for Android (Scope,ViewModel ...)
-    api "io.insert-koin:koin-android:3.3.0"
-    implementation "io.insert-koin:koin-android-ext:3.0.2"
+    api "io.insert-koin:koin-android:$versionKoin"
+    implementation "io.insert-koin:koin-android-ext:$versionKoinExt"
 
     //Retrofit (REST)
-    api "com.squareup.retrofit2:retrofit:2.9.0"
-    api "com.squareup.retrofit2:converter-gson:2.9.0"
-    api "com.squareup.okhttp3:okhttp:4.9.3"
-    api "com.squareup.okhttp3:logging-interceptor:4.9.3"
-    api "com.google.code.gson:gson:2.9.0"
+    api "com.squareup.retrofit2:retrofit:$versinRetrofit"
+    api "com.squareup.retrofit2:converter-gson:$versinRetrofitConverter"
+    api "com.google.code.gson:gson:$versinRetrofitConverter"
 }
