--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -14,8 +14,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     //DI
-    implementation "io.insert-koin:koin-core:3.2.2"
+    implementation "io.insert-koin:koin-core:$versionKoin"
 
     //Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versionKotlinCoroutines"
 }
